# practice

./: .gitignore  README.md
SDL2/: CMakeLists.txt
SDL2/02_getting_an_image_on_the_screen/: 02_getting_an_image_on_the_screen.cpp
SDL2/04_key_presses/: 04_key_presses.cpp
SDL2/05_optimized_surface_loading_and_soft_stretching/: 05_optimized_surface_loading_and_soft_stretching.cpp
SDL2/07_texture_loading_and_rendering/: 07_texture_loading_and_rendering.cpp
SDL2/08_geometry_rendering/: 08_geometry_rendering.cpp
SDL2/22_timing/: 22_timing.cpp
SDL2/example/: CMakeLists.txt  alpha_blend.cpp  animation.cpp  calculate_fps.cpp  chain_of_responsibility.cpp  clip_render.cpp  common.h  geometry.cpp  key_states.cpp  modulate.cpp  mouse_event.cpp  rotate_and_flip.cpp  sound.cpp  thread_wrap.cpp  timing.cpp  ttf_render.cpp
clang/: main.cpp
cpp/: .clangd  CMakeLists.txt  co_spawn.hpp  co_spawn_test.cpp  common_test.h  coroutine.cpp  echo_server.cpp  generator.cpp  generator_test.cpp  io_context.cpp  io_context.hpp  lru_cache.cpp  main.cpp  pipe.cpp  socket.hpp  static_thread_pool.hpp  sync_wait.hpp  sync_wait_test.cpp  task.cpp  task.hpp  task_test.cpp  test.cpp
cpp/coroutine/: CMakeLists.txt  co_spawn_test.cpp  common.h  generator.hpp  io_context.hpp  io_context_test.cpp  manual_reset_event.hpp  socket.hpp  static_thread_pool.hpp  sync_wait.hpp  sync_wait_test.cpp  task.hpp  task_test.cpp
cpp/range/: CMakeLists.txt  main.cpp
llvm/: Makefile  kaleidoscope_ir.cpp  kaleidoscope_jit.cpp  main.cpp
rust/src/: lru_cache.rs  main.rs
